# Projet_2_AI

./: .gitignore  README.md  hugging_face.ipynb  main.py  pyproject.toml  requirements.txt
